[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "unique-ids"
path = "src/unique-ids.rs"

[[bin]]
name = "broadcast"
path = "src/broadcast.rs"

[[bin]]
name = "g-counter"
path = "src/g-counter.rs"


[dependencies]
anyhow = "1.0.70"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
insta = { version = "1.29.0", features = ["serde", "json"] }
